# dashboard-md

./: .gitignore  MANIFEST.in  README.md  dataview-playlist-maker.py  index.html  news-videos.html  playlist-maker  pyproject.toml  setup.py  tech-videos.html
playlist_maker/: __init__.py  data.py  main.py
playlist_maker/html_templates/: dashboard.js  home.html  video.html  video.js
playlist_maker/templates/: __init__.py  dashboard_widgets.py  data_row.py  home_page.py  home_page_fixed.py  playlists_sidebar.py  unified_page_js.py  video_page.py
playlist_maker/utils/: __init__.py  colors.py  dashboard_data.py  dashboard_styles.py  svg_icons.py  templates.py  widget_generators.py
